Fix word wrap for entry headers

--- a/src/styles.css
+++ b/src/styles.css
@@ -10,3 +10,9 @@
 .cursor-pointer {
   cursor: pointer;
 }
+
+.title-wrap-word {
+  overflow: hidden;
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+}
